dnl Process this file with autoconf to produce a configure script.

AC_INIT(ataks.c)

dnl Checks for programs.
if test -z "$CFLAGS" ; then
  CFLAGS_DEFAULTED=yes
fi
AC_PROG_CC
if test "$CFLAGS_DEFAULTED" = yes; then
  if test "$GCC" = yes; then
    CFLAGS="-O2"
  else
    dnl Probably every compiler has a -O flag, but not all have -O2, -O3, etc
    CFLAGS="-O"
  fi
fi
AC_PROG_INSTALL

dnl Checks for libraries.
AC_CHECK_LIB(m, sqrt)
AC_CHECK_LIB(termcap, tgetent)
AC_CHECK_LIB(curses, printw)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h time.h sys/file.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_CHECK_SIZEOF(long)

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
dnl AC_FUNC_SETVBUF_REVERSED
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gettimeofday strstr strtol strtoul memset)
AC_CHECK_FUNCS(setvbuf)
if test "HAVE_SETVBUF" = no ; then
  AC_CHECK_FUNCS(setlinebuf)
fi

AC_OUTPUT(Makefile)
